--- a/src/app.css
+++ b/src/app.css
@@ -9,4 +9,165 @@ In many cases you may want to use the NativeScript core theme instead
 of writing your own CSS rules. For a full list of class names in the theme
 refer to http://docs.nativescript.org/ui/theme.
 */
+
 @import '~nativescript-theme-core/css/core.light.css';
+.btn-primary {
+    height: 50;
+    background-color: #D51A1A;
+    border-radius: 5;
+    font-size: 18;
+    font-weight: 600;
+}
+
+.btn-secondary {
+    height: 40;
+    background-color: #018abe;
+    border-radius: 5;
+    font-size: 15;
+    font-weight: 600;
+}
+
+.btn-primary:disabled {
+    opacity: 0.5;
+}
+
+
+/**
+THEME BUILDER
+*/
+
+.list-group,
+.list-group-item {
+    background-color: #ffffe8;
+}
+
+.img-circle {
+    border-radius: 40;
+}
+
+.list-group-item-heading {
+    margin-bottom: 5;
+    font-size: 16;
+}
+
+.list-group-item-text {
+    font-size: 14;
+    margin-top: 5;
+}
+
+.img-rounded {
+    border-radius: 70;
+}
+
+.tab-view {
+    selected-tab-text-color: #ffffff;
+}
+
+.tab-view {
+    tab-text-color: #ffffff;
+}
+
+.tab-view {
+    tab-background-color: #412726;
+}
+
+.tab-view {
+    android-selected-tab-highlight-color: #b70129;
+}
+
+.btn-outline {
+    border-color: transparent;
+}
+
+.btn-outline {
+    background-color: transparent;
+}
+
+.btn-outline {
+    border-width: 1;
+}
+
+.btn-outline {
+    color: #412726;
+}
+
+.action-bar {
+    color: #ffffff;
+}
+
+.action-bar {
+    background-color: #b70129;
+}
+
+.page {
+    background-color: #ffffff;
+}
+
+.tab-view {
+    tab-background-color: #ffffff;
+}
+
+.page label.text-primary,
+.tab-view label.text-primary {
+    color: #30bcff;
+}
+
+.page label.bg-primary,
+.tab-view label.bg-primary {
+    background-color: #30bcff;
+}
+
+.page label.text-danger,
+.tab-view label.text-danger {
+    color: #d9534f;
+}
+
+.page label.bg-danger,
+.tab-view label.bg-danger {
+    background-color: #d9534f;
+}
+
+.page label.text-muted,
+.tab-view label.text-muted {
+    color: #a2a2a2;
+}
+
+.sidedrawer-header {
+    background-color: #ea2e4d;
+}
+
+.sidedrawer-header-brand {
+    color: #ffffff;
+}
+
+.sidedrawer-content {
+    background-color: #ffffff;
+}
+
+.sidedrawer-list-item {
+    color: #000000;
+}
+
+.sidedrawer-list-item.active {
+    background-color: #ffffff;
+}
+
+.sidedrawer-list-item.active {
+    color: #000000;
+}
+
+.tab-view {
+    selected-tab-text-color: #ffffff;
+}
+
+.tab-view {
+    tab-text-color: #ffffff;
+}
+
+.tab-view {
+    tab-background-color: #282828;
+}
+
+.tab-view {
+    android-selected-tab-highlight-color: #ea2e4d;
+}
