--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,4 +1,4 @@
-<TabView class="tab-view" id="tabViewContainer">
+<TabView class="tab-view" id="tabViewContainer" androidTabsPosition="bottom">
     <StackLayout *tabItem="{title: 'Productos'}">
         <StackLayout>
             <Productos></Productos>
