--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -11,3 +11,12 @@
 .card-layout .h1 {
     margin-bottom: 15;
 }
+
+.input-field {
+    margin-bottom: 25;
+}
+
+.input {
+    font-size: 18;
+    placeholder-color: #A8A8A8;
+}
