--- a/src/app/productos/producto.component.html
+++ b/src/app/productos/producto.component.html
@@ -2,21 +2,37 @@
     <NavigationButton text="Back" (tap)="onBackButtonTap()" android.systemIcon="ic_menu_back"></NavigationButton>
 </ActionBar>
 <GridLayout class="page">
+    <ScrollView>
 
-    <StackLayout class="card-layout">
-        <Image class="img-thumbnail" [src]="producto.img | imagen:'producto'"></Image>
-        <Label class="h2" text="{{nombre}}"></Label>
-        <Label class="h3" [text]="producto.nombre"></Label>
-        <Label class="body" textWrap="true" [text]="producto.descripcion"></Label>
-        <Label class="h3" text="Aquí puedes cotizar el producto" textWrap="true"></Label>
-        <StackLayout orientation="horizontal">
-            <Label class="h3" text="Cantidad." textWrap="true"></Label>
-            <Button text="<" (tap)="variarPrecio(-1)" class="btn btn-sky"></Button>
-            <Label class="input input-field" [text]="cantidad"></Label>
-            <Button text=">" (tap)="variarPrecio(+1)" class="btn btn-sky"></Button>
+        <StackLayout class="card-layout">
 
+            <Image class="img-thumbnail" [src]="img | imagen:'producto'"></Image>
+            <Label class="h2" [text]="nombre" textWrap="true"></Label>
+            <Label class="h3" [text]="categoria"></Label>
+            <Label class="body" textWrap="true" [text]="descripcion"></Label>
+            <Label class="h3" text="Aquí puedes cotizar el producto" textWrap="true"></Label>
+
+            <StackLayout orientation="horizontal" *ngIf="!rotulos && !rotulos3D">
+                <Label class="h3" text="Cantidad." textWrap="true"></Label>
+                <Button text="-" (tap)="variarPrecio(-1)" class="btn btn-sky"></Button>
+                <Label class="input input-field" [text]="cantidad"></Label>
+                <Button text="+" (tap)="variarPrecio(+1)" class="btn btn-sky"></Button>
+            </StackLayout>
+
+            <StackLayout orientation="horizontal" *ngIf="rotulos">
+                <TextField class="input" hint="Altura" keyboardType="phone" [(ngModel)]="alto"></TextField>
+                <TextField class="input" hint="Ancho" keyboardType="phone" [(ngModel)]="ancho"></TextField>
+                <Button text="Calcular" (tap)="variarPrecioRotulo()" class="btn btn-sky"></Button>
+            </StackLayout>
+
+            <StackLayout orientation="horizontal" *ngIf="rotulos3D">
+                <TextField class="input" hint="Altura" keyboardType="phone" [(ngModel)]="alto"></TextField>
+                <TextField class="input" hint="Ancho" keyboardType="phone" [(ngModel)]="ancho"></TextField>
+                <TextField class="input" hint="Número de letras" keyboardType="phone" [(ngModel)]="nletras"></TextField>
+                <Button text="Calcular" (tap)="variarPrecioRotulo3D()" class="btn btn-sky"></Button>
+            </StackLayout>
+
+            <Label class="h2 text-right text-danger" textWrap="true" text=" Precio Final:  ${{precioFinal}}"></Label>
         </StackLayout>
-        <Label class="h2 text-right text-danger" textWrap="true" text=" Precio Final:  ${{precioFinal}}"></Label>
-    </StackLayout>
-
+    </ScrollView>
 </GridLayout>
