--- a/src/app.css
+++ b/src/app.css
@@ -36,75 +36,110 @@ refer to http://docs.nativescript.org/ui/theme.
 THEME BUILDER
 */
 
-.list-group,
-.list-group-item {
-    background-color: #ffffe8;
-}
-
-.img-circle {
-    border-radius: 40;
-}
-
-.list-group-item-heading {
-    margin-bottom: 5;
-    font-size: 16;
-}
-
-.list-group-item-text {
-    font-size: 14;
-    margin-top: 5;
-}
-
-.img-rounded {
-    border-radius: 70;
-}
-
-.tab-view {
-    selected-tab-text-color: #ffffff;
-}
-
-.tab-view {
-    tab-text-color: #ffffff;
-}
-
-.tab-view {
-    tab-background-color: #412726;
-}
-
-.tab-view {
-    android-selected-tab-highlight-color: #b70129;
-}
-
-.btn-outline {
-    border-color: transparent;
-}
-
-.btn-outline {
-    background-color: transparent;
-}
-
-.btn-outline {
-    border-width: 1;
-}
-
-.btn-outline {
-    color: #412726;
-}
-
 .action-bar {
     color: #ffffff;
 }
 
 .action-bar {
-    background-color: #b70129;
+    background-color: #0e3746;
 }
 
 .page {
-    background-color: #ffffff;
+    background-color: #eae8dc;
 }
 
 .tab-view {
-    tab-background-color: #ffffff;
+    tab-background-color: #eae8dc;
+}
+
+.list-group,
+.list-group-item {
+    background-color: #f4f2ec;
+}
+
+.page label,
+.tab-view label {
+    color: #0e3746;
+}
+
+.segmented-bar {
+    selected-background-color: #0e3743;
+}
+
+.segmented-bar {
+    color: #0e3746;
+}
+
+.segmented-bar {
+    background-color: #f4f2ec;
+}
+
+.switch[checked=true] {
+    color: #ffffff;
+}
+
+.switch[checked=true] {
+    background-color: #0e3746;
+}
+
+.activity-indicator {
+    color: #021820;
+}
+
+.slider {
+    color: #ffffff;
+}
+
+.slider {
+    background-color: #0e3746;
+}
+
+.progress {
+    color: #0e3746;
+}
+
+.img-circle {
+    border-radius: 20;
+}
+
+.list-group-item-heading {
+    font-size: 16;
+}
+
+.list-group-item-text {
+    font-size: 14;
+}
+
+.img-rounded {
+    border-radius: 5;
+}
+
+.body {
+    font-size: 14;
+}
+
+.h1 {
+    font-size: 36;
+}
+
+.h2 {
+    font-size: 30;
+}
+
+.h3 {
+    font-size: 24;
+}
+
+.h4 {
+    font-size: 18;
+}
+
+.h5 {
+    font-size: 14;
+}
+
+.h6 {
+    font-size: 12;
 }
 
 .page label.text-primary,
@@ -132,8 +167,88 @@ THEME BUILDER
     color: #a2a2a2;
 }
 
+.btn {
+    color: #0e3746;
+}
+
+.btn-primary {
+    background-color: #0e3746;
+}
+
+.btn-primary {
+    border-color: #0e3746;
+}
+
+.btn-primary {
+    color: #f4f2ec;
+}
+
+.btn-outline {
+    border-color: #0e3746;
+}
+
+.btn-outline {
+    background-color: transparent;
+}
+
+.btn-outline {
+    border-width: 1;
+}
+
+.btn-outline {
+    color: #0e3746;
+}
+
+.btn[isEnabled=false] {
+    background-color: #0e3746;
+}
+
+.btn[isEnabled=false] {
+    border-color: #0e3746;
+}
+
+.btn[isEnabled=false] {
+    color: #f4f2ec;
+}
+
+.btn-rounded-sm {
+    border-radius: 4;
+}
+
+.btn-rounded-lg {
+    border-radius: 20;
+}
+
+.label {
+    font-size: 16;
+}
+
+.input {
+    font-size: 14;
+}
+
+.input-rounded {
+    border-radius: 30;
+}
+
+.tab-view {
+    selected-tab-text-color: #f4f2ec;
+}
+
+.tab-view {
+    tab-text-color: #f4f2ec;
+}
+
+.tab-view {
+    tab-background-color: #0e3743;
+}
+
+.tab-view {
+    android-selected-tab-highlight-color: #be2623;
+}
+
 .sidedrawer-header {
-    background-color: #ea2e4d;
+    background-color: #0e3743;
 }
 
 .sidedrawer-header-brand {
@@ -141,7 +256,7 @@ THEME BUILDER
 }
 
 .sidedrawer-content {
-    background-color: #ffffff;
+    background-color: #f4f2ec;
 }
 
 .sidedrawer-list-item {
@@ -149,25 +264,9 @@ THEME BUILDER
 }
 
 .sidedrawer-list-item.active {
-    background-color: #ffffff;
+    background-color: #f4f2ec;
 }
 
 .sidedrawer-list-item.active {
     color: #000000;
-}
-
-.tab-view {
-    selected-tab-text-color: #ffffff;
-}
-
-.tab-view {
-    tab-text-color: #ffffff;
-}
-
-.tab-view {
-    tab-background-color: #282828;
-}
-
-.tab-view {
-    android-selected-tab-highlight-color: #ea2e4d;
 }
