--- a/src/app/productos/productos.component.css
+++ b/src/app/productos/productos.component.css
@@ -1,7 +1,7 @@
     .card {
-        background-color: #fff;
+        background-color: #f4f2ec;
         color: #4d4d4d;
-        margin: 15 15 0;
+        margin: 10 10 0;
     }
     
     .card-layout {
@@ -16,79 +16,12 @@
         margin-bottom: 25;
     }
     
-    .input {
+    .inputCantidad {
         font-size: 25;
         placeholder-color: #A8A8A8;
     }
     
-    .page {
-        background-color: #f1f5f8;
-    }
-    
-    .home-page-content {
-        padding-top: 15;
-    }
-    
-    .home-page-content .balance-chart {
-        background-color: #ffffff;
-        border-radius: 5;
-        margin-left: 15;
-        margin-right: 15;
-        border-color: #f1f5f8;
-        border-width: 1;
-    }
-    
-    .home-page-content .balance-chart {
-        padding: 7.5;
-    }
-    
-    .home-page-content .balance-summary {
-        text-align: center;
-        vertical-align: middle;
-    }
-    
-    .home-page-content .balance-summary StackLayout {
-        padding-left: 20;
-        padding-right: 20;
-    }
-    
-    .home-page-content .balance-summary .title {
-        color: #606f7b;
-        font-size: 12;
-        margin-bottom: 5;
-    }
-    
-    .home-page-content .balance-summary .ammount {
-        color: #3d4852;
-        font-size: 16;
-        font-weight: 600;
-        margin-bottom: 5;
-    }
-    
-    .home-page-content .balance-summary .hr-light {
-        height: 3;
-    }
-    
-    .home-page-content .balance-summary .hr-light.green {
-        background-color: #38c172;
-    }
-    
-    .home-page-content .balance-summary .hr-light.red {
-        background-color: #e3342f;
-    }
-    
-    .home-page-content .expenses-chart {
-        padding-left: 15;
-        padding-right: 15;
-    }
-    
-    .home-page-content .expenses-chart Label {
-        font-size: 16;
-        text-align: center;
-        color: #3d4852;
-    }
-    
-    .input {
+    .inputVariables {
         font-size: 12;
         placeholder-color: #A8A8A8;
     }
