--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -3,7 +3,7 @@
 
         <StackLayout class="form">
 
-            <Image class="img-rounded" [src]="usuario.img | imagen"></Image>
+            <Image class="logo" [src]="usuario.img | imagen"></Image>
             <GridLayout (longPress)="onLongPress($event)">
                 <Label class="input input-rounded" text="NOMBRE: {{usuario.nombre}} " textWrap="true" (longPress)="onLongPress($event)"></Label>
             </GridLayout>
