--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -3,12 +3,12 @@
 
         <StackLayout class="form">
 
-            <Image class="logo" [src]="usuario.img | imagen"></Image>
+            <Image class="logo borde" [src]="usuario.img | imagen"></Image>
             <GridLayout (longPress)="onLongPress($event)">
-                <Label class="input input-rounded" text="NOMBRE: {{usuario.nombre}} " textWrap="true" (longPress)="onLongPress($event)"></Label>
+                <Label class="input input-field input-rounded" text="NOMBRE: {{usuario.nombre}} " textWrap="true" (longPress)="onLongPress($event)"></Label>
             </GridLayout>
-            <Label *ngIf="!editar" class="input input-rounded" text="CORREO: {{usuario.email}} " textWrap="true"></Label>
-            <Label *ngIf="!editar" class="input input-rounded" text="TELEFONO: {{usuario.telefono}} " textWrap="true"></Label>
+            <Label *ngIf="!editar" class="input input-field input-rounded" text="CORREO: {{usuario.email}} " textWrap="true"></Label>
+            <Label *ngIf="!editar" class="input input-field input-rounded" text="TELEFONO: {{usuario.telefono}} " textWrap="true"></Label>
             <Button text="Logout" class="btn btn-primary" (tap)="salir()"></Button>
 
         </StackLayout>
