Comentando Impresiones de consola, Algunos cambios

--- a/src/app/productos/producto.component.html
+++ b/src/app/productos/producto.component.html
@@ -7,7 +7,7 @@
         <StackLayout class="list-group card card-layout">
 
             <Image class="img-rounded" [src]="img | imagen:'producto'"></Image>
-            <Label class="h3" [text]="nombre" textWrap="true"></Label>
+            <!-- <Label class="h3" [text]="nombre" textWrap="true"></Label> -->
             <Label class="h4" [text]="categoria"></Label>
             <Label class="body" textWrap="true" [text]="descripcion"></Label>
             <Label class="h5" text="Aquí puedes cotizar el producto" textWrap="true"></Label>
