--- a/src/app/productos/producto.component.html
+++ b/src/app/productos/producto.component.html
@@ -1,4 +1,6 @@
 <ActionBar title="{{nombre}}" icon="" class="action-bar">
+    <ActionItem text="Item" ios.position="right" android.position="popup"></ActionItem>
+    <ActionItem ios.systemIcon="12" android.systemIcon="ic_menu_search"></ActionItem>
     <NavigationButton text="Back" (tap)="onBackButtonTap()" android.systemIcon="ic_menu_back"></NavigationButton>
 </ActionBar>
 <GridLayout class="page">
