--- a/src/app/cotizaciones/cotizaciones.component.css
+++ b/src/app/cotizaciones/cotizaciones.component.css
@@ -12,3 +12,53 @@
 label {
     margin-right: 5;
 }
+
+.music-genre {
+    padding: 34px 0;
+    border-bottom-width: 1px;
+    border-bottom-color: #d1d1d1;
+}
+
+.music-genre label {
+    font-size: 24px;
+    color: #1F1C0D;
+}
+
+.music-genre label.number {
+    text-align: center;
+    color: #fba0e3;
+}
+
+.skeleton label {
+    background-color: #d1d1d1;
+    border-radius: 15px;
+}
+
+.number-skeleton,
+.genre-skeleton {
+    animation-name: skeletonShimmer;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes skeletonShimmer {
+    0% {
+        background-color: #eeeeee;
+    }
+    50% {
+        background-color: #d1d1d1;
+    }
+    100% {
+        background-color: #eeeeee;
+    }
+}
+
+.number-skeleton {
+    width: 80px;
+}
+
+.genre-skeleton {
+    text-align: left;
+    margin-right: 25%;
+}
