--- a/src/app/cotizaciones/cotizaciones.component.html
+++ b/src/app/cotizaciones/cotizaciones.component.html
@@ -1,31 +1,40 @@
-<ListView class="list-group-item-text" [items]="getLista">
+<GridLayout tkExampleTitle tkToggleNavButton>
+    <RadListView [items]="getLista" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+        <ng-template tkListItemTemplate let-estudio="item">
 
-    <ng-template let-estudio="item" let-i="index" let-odd="odd" let-event="even">
-        <StackLayout class="margenSeparacion" orientation="horizontal">
-
-            <Image class="imageList img-circle" [src]="estudio.image"></Image>
-            <StackLayout orientation="vertical">
-                <StackLayout class="list-group-item-heading" orientation="horizontal">
-                    <Label text="Id:" textWrap="true"></Label>
-                    <Label [text]="estudio.id"></Label>
-                    <Label text="Personaje:" textWrap="true"></Label>
-                    <Label [text]="estudio.name"></Label>
-                </StackLayout>
-                <StackLayout class="list-group-item-text" orientation="vertical">
-                    <StackLayout class="list-group-item-text" orientation="horizontal">
-                        <Label text="Género:" textWrap="true"></Label>
-                        <Label [text]="estudio.gender"></Label>
+            <StackLayout class="margenSeparacion" orientation="horizontal">
+                <Image class="imageList img-circle" [src]="estudio.image"></Image>
+                <StackLayout orientation="vertical">
+                    <StackLayout class="list-group-item-heading" orientation="horizontal">
+                        <Label text="Id:" textWrap="true"></Label>
+                        <Label [text]="estudio.id"></Label>
+                        <Label text="Personaje:" textWrap="true"></Label>
+                        <Label [text]="estudio.name"></Label>
                     </StackLayout>
-                    <StackLayout class="list-group-item-text" orientation="horizontal">
-                        <Label text="Especie:" textWrap="true"></Label>
-                        <Label [text]="estudio.species"></Label>
-                    </StackLayout>
-                    <StackLayout class="list-group-item-text" orientation="horizontal">
-                        <Label text="Estado:" textWrap="true"></Label>
-                        <Label [text]="estudio.status"></Label>
+                    <StackLayout class="list-group-item-text" orientation="vertical">
+                        <StackLayout class="list-group-item-text" orientation="horizontal">
+                            <Label text="Género:" textWrap="true"></Label>
+                            <Label [text]="estudio.gender"></Label>
+                        </StackLayout>
+                        <StackLayout class="list-group-item-text" orientation="horizontal">
+                            <Label text="Especie:" textWrap="true"></Label>
+                            <Label [text]="estudio.species"></Label>
+                        </StackLayout>
+                        <StackLayout class="list-group-item-text" orientation="horizontal">
+                            <Label text="Estado:" textWrap="true"></Label>
+                            <Label [text]="estudio.status"></Label>
+                        </StackLayout>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
-        </StackLayout>
-    </ng-template>
-</ListView>
+
+            <!-- <GridLayout class="music-genre skeleton" rows="*" columns="55,*" >
+                <Label row="0" col="0" text=" " class="number number-skeleton"></Label>
+                <Label row="0" col="1" text=" " class="genre genre-skeleton"></Label>
+            </GridLayout> -->
+
+        </ng-template>
+
+
+    </RadListView>
+</GridLayout>
