Validación ReactiveForms Component Signup

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -17,7 +17,7 @@
         </GridLayout>
 
 
-        <Button text="Ingresar a tu Cuenta" class="btn btn-primary" (tap)="ingresar()"></Button>
-        <Button text="Registrar una Cuenta" (tap)="irRegistrar()" class="btn btn-outline"></Button>
+        <Button text="Ingresar a tu Cuenta" class="btn btn-primary btn-active" (tap)="ingresar()"></Button>
+        <Button text="Registrar una Cuenta" (tap)="irRegistrar()" class="btn btn-outline btn-active"></Button>
     </StackLayout>
 </FlexboxLayout>
