--- a/src/app/login/signup.component.html
+++ b/src/app/login/signup.component.html
@@ -1,42 +1,60 @@
 <FlexboxLayout class="page">
     <StackLayout class="form">
         <Image class="logo" src="~/assets/images/logo.png"></Image>
-        <Label class="header" text="Resgistra una cuenta en Digital Ads"></Label>
-        <ScrollView>
-            <StackLayout>
+        <Label class="header" text="Digital Ads"></Label>
+        <StackLayout [formGroup]="registroForm">
+            <ScrollView height="250">
                 <GridLayout rows="auto auto auto auto,auto">
 
                     <StackLayout row="0" class="input-field">
-                        <TextField class="input" hint="Nombre y Apellido" autocorrect="false" [(ngModel)]="nombre"></TextField>
+
+                        <TextField class="input" hint="Nombre y Apellido" autocorrect="false" formControlName="nombre"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
+                        <Label text="Es necesario el nombre" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.required"></Label>
+                        <Label text="Por lo menos tres caracteres" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.minlength"></Label>
+
                     </StackLayout>
 
+
                     <StackLayout row="1" class="input-field">
-                        <TextField class="input" hint="Correo Electrónico" keyboardType="email" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email"></TextField>
+
+                        <TextField class="input" hint="Correo Electrónico" keyboardType="email" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
+                        <Label text="Es necesario el email" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.required"></Label>
+
                     </StackLayout>
 
                     <StackLayout row="2" class="input-field">
-                        <TextField class="input" hint="Número telefónico" keyboardType="phone" [(ngModel)]="telefono"></TextField>
+
+                        <TextField class="input" hint="Número telefónico" keyboardType="number" formControlName="telefono"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
+                        <Label text="Es necesario el telefono" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.required"></Label>
+
                     </StackLayout>
 
                     <StackLayout row="3" class="input-field">
-                        <TextField class="input" hint="Contraseña" secure="true" [(ngModel)]="password"></TextField>
+
+                        <TextField class="input" hint="Contraseña" secure="true" formControlName="password"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
+                        <Label text="Es necesario el password" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.required"></Label>
+
                     </StackLayout>
 
                     <StackLayout row="4" class="input-field">
-                        <TextField class="input" hint="Confirmar Contraseña" secure="true" [(ngModel)]="password2"></TextField>
+                        <TextField class="input" hint="Confirmar Contraseña" secure="true" formControlName="password2"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
+                        <Label text="Es necesario el password2" class="text-danger h6" *ngIf="registroForm.controls['password2'].errors?.required"></Label>
+                        <Label text="Las contraseñas no coinciden" class="text-danger h6" *ngIf="registroForm.errors?.sonIguales && !registroForm.pristine"></Label>
+
                     </StackLayout>
 
                 </GridLayout>
+            </ScrollView>
 
-                <Button text="Registrate" class="btn btn-primary" (tap)="signup()"></Button>
-                <Button text="Login ->" (tap)="regresarLogin()" class="btn btn-sky"></Button>
+            <Button [visibility]="registroForm.valid ? 'visible' : 'collapse'" text="Registrate" class="btn btn-primary btn-active" (tap)="signup()"></Button>
+            <Button text="Regresar" textwrap="true" (tap)="regresarLogin()" class="btn btn-outline btn-rounded-sm btn-active"></Button>
+            <Label text="{{registroForm.valid}}" textWrap="true"></Label>
 
-            </StackLayout>
-        </ScrollView>
+        </StackLayout>
     </StackLayout>
 </FlexboxLayout>
