--- a/src/app/productos/producto.component.html
+++ b/src/app/productos/producto.component.html
@@ -24,15 +24,15 @@
             </StackLayout>
 
             <StackLayout orientation="horizontal" *ngIf="rotulos">
-                <TextField class="inputVariables" hint="Altura" keyboardType="phone" [(ngModel)]="alto"></TextField>
-                <TextField class="inputVariables" hint="Ancho" keyboardType="phone" [(ngModel)]="ancho"></TextField>
+                <TextField class="inputVariables" hint="Altura" keyboardType="number" [(ngModel)]="alto"></TextField>
+                <TextField class="inputVariables" hint="Ancho" keyboardType="number" [(ngModel)]="ancho"></TextField>
                 <Button text="Calcular" (tap)="variarPrecioRotulo()" class="btn btn-outline btn-rounded-lg btn-active"></Button>
             </StackLayout>
 
             <StackLayout orientation="horizontal" *ngIf="rotulos3D">
-                <TextField class="inputVariables" hint="Altura" keyboardType="phone" [(ngModel)]="alto"></TextField>
-                <TextField class="inputVariables" hint="Ancho" keyboardType="phone" [(ngModel)]="ancho"></TextField>
-                <TextField class="inputVariables" hint="Número de letras" keyboardType="phone" [(ngModel)]="nletras"></TextField>
+                <TextField class="inputVariables" hint="Altura" keyboardType="number" [(ngModel)]="alto"></TextField>
+                <TextField class="inputVariables" hint="Ancho" keyboardType="number" [(ngModel)]="ancho"></TextField>
+                <TextField class="inputVariables" hint="Número de letras" keyboardType="number" [(ngModel)]="nletras"></TextField>
                 <Button text="Calcular" (tap)="variarPrecioRotulo3D()" class="btn btn-outline btn-rounded-lg btn-active"></Button>
             </StackLayout>
 
