--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,17 +1,17 @@
 <GridLayout class="page">
 
-    <TabView class="tab-view" *ngIf="!isLoading" id="tabViewContainer" androidTabsPosition="bottom">
-        <StackLayout *tabItem="{title: 'Productos'}">
+    <TabView class="tab-view ico" *ngIf="!isLoading" id="tabViewContainer" androidTabsPosition="bottom">
+        <StackLayout *tabItem="{title: '&#xe901;'}">
             <StackLayout>
                 <Productos></Productos>
             </StackLayout>
         </StackLayout>
-        <StackLayout *tabItem="{title: 'Cotizaciones'}">
+        <StackLayout *tabItem="{title: '&#xe93a;'}">
             <StackLayout>
                 <Cotizaciones></Cotizaciones>
             </StackLayout>
         </StackLayout>
-        <StackLayout *tabItem="{title: 'Perfil'}">
+        <StackLayout *tabItem="{title: '&#xe971;'}">
             <StackLayout>
                 <Perfil></Perfil>
             </StackLayout>
